Version 3.11 beta, release Notes

New functions:
